--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,7 @@
         body {
             font-family: Arial, sans-serif;
             margin: 20px;
+            background-color: #A9A9A9;
         }
 
         form {
@@ -41,6 +42,13 @@
         button:hover {
             background-color: #45a049;
         }
+
+        footer {
+          text-align: center;
+          padding: 3px;
+          background-color: black;
+          color: white;
+       }
     </style>
 </head>
 <body>
@@ -60,6 +68,10 @@
         <p>Input Minterms: {{ minterms }}</p>
         <!--<p>Number of Variables: {{ dc }}</p>-->
     {% endif %}
+<footer>
+  <p>Made By: Tarun Sehgal <br></p>
+  <p>Roll No: 23201712 <br></p>
+</footer>
 </body>
 </html>
 
